--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         t[i]= document.getElementById(String(i+1));
       }
       var newg=document.getElementById('new');
+      var n_tries=document.getElementById('tries');
       function getRandomColor() {
         var letters = "0123456789ABCDEF";
         var color = "#";
@@ -48,7 +49,13 @@
         }
         return color;
       }
-
+      function tries_inp(){
+        var m = prompt('Enter Number Of Tries(should be between 1 and 6)', '4');
+        if (m>0 && m<7 && m%1==0) {
+          tries=m;
+          document.getElementById("tries-clue").innerHTML = 'Tries Left:'+tries;
+        }
+      }
       function newGame() {
         for (var i=0;i<n;i++) {
           t[i].style.background=getRandomColor();
@@ -83,19 +90,18 @@
                 e.style.background = "black";
                 e.style.border = "black";
               }
-              
             });
           }
           event.currentTarget.style.background = "black";
           event.currentTarget.style.border = "black";
         }
       })
-      t[i].addEventListener("mouseover", function (event) {
-        //event.currentTarget.style.height *= 2;
-        
-      })};
+    };
       newg.addEventListener("click", function () {
         newGame()
+      });
+      n_tries.addEventListener("click", function () {
+        tries_inp()
       });
     </script>
   </body>
